# lunch-assignment-app

./: .env  .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/env/: .env.local
backend/src/: main.py
backend/src/configs/: api_config.py  settings.py
backend/src/db/: session.py
backend/src/model/: base_model.py
backend/src/model/assignment/: assignment_model.py
backend/src/model/restaurant/: restaurant_model.py
backend/src/model/user/: user_model.py
backend/src/repositories/: assignment.py  restaurant.py  user.py
backend/src/router/assignment/: assignment_router.py
backend/src/router/restaurant/: restaurant_router.py
backend/src/router/user/: user_router.py
backend/src/schema/assignment/: assignment_schema.py
backend/src/schema/restaurant/: restaurant_schema.py
backend/src/schema/user/: user_schema.py
backend/src/service/assignment/: assignment_service.py
backend/src/service/restaurant/: restaurant_service.py
backend/src/service/user/: user_service.py
backend/src/util/: auth_util.py  dummy_data_util.py  sqladmin_util.py
frontend/: package-lock.json  package.json
frontend/src/api/: assignment.js  restaurant.js
frontend/src/app/: Providers.js  layout.js  page.js  page.module.css
frontend/src/app/restaurant/: page.js  restaurant.module.css
frontend/src/hooks/: useRestaurant.js
frontend/src/lib/: axios.js
frontend/src/store/: store.js
frontend/src/store/slices/: assignmentSlice.js  restaurantSlice.js
